--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <i class="icon-menu burger-button" id="burger-menu"></i>
     <header class="header">
         <div class="container">
             <figure class="logo">
@@ -53,79 +54,81 @@
             <article class="WhatIlovetodo">
                 <h2>What I love to do</h2>
                 <div class="lovetodo">
-                    <p class="travel">Travel</p>
-                    <p class="eat">Eat!</p>
-                    <p class="movies">Watch movies</p>
-                    <p class="family">Be with my family</p>
+                    <p class="lovetodo-brown">Travel</p>
+                    <p class="lovetodo-pink">Eat!</p>
+                    <p class="lovetodo-brown">Watch movies</p>
+                    <p class="lovetodo-pink">Be with my family</p>
                 </div>
             </article>       
         </div>
     </section>
-    <article class="experience-list-title">
-        <div class="container">
-            <h2>My Profesional Experience</h2>
-        </div>
-    </article>
     <section id="Experience" class="experience-list">
         <div class="container">
-            <article class="experience">
-                <figure class="experience-imageContainer">
-                    <img class="experience-image-pm" src="./Images/Project-manager-hero.png"/>
-                </figure>
-                <div class="experience-detail">
-                    <h3 class="experience-title">Project Management</h3>
-                    <p class="experience-description">Tengo más de 6 años de experiencia dirigiendo proyectos de desarrollo de hardware y software al rededor del mundo.</p>
-                    <button class="experience-button"><a href="./Project-manager/index.html" target="blank">Ver más</a></button>
-                    <div class="skills">
-                        <p>Agile</p>
-                        <p>PMP</p>
-                        <P>MS Project</P>
-                        <p>Monday</p>
-                </div>
+            <article class="experience-list-title">
+                <!-- <div class="container"> -->
+                    <h2>My Profesional Experience</h2>
+                <!-- </div> -->
             </article>
-            <article class="experience">
-                <figure class="experience-imageContainer">
-                    <img class="experience-image-PM" src="./Images/Product-manager-hero.png" width="500" />
-                </figure>
-                <div class="experience-detail">
-                    <h3 class="experience-title">Product Management</h3>
-                    <p class="experience-description">Es el cargo que desempeño actualmente y me ha abierto la puerta a un mundo de conocimiento hasta ahora desconocido.</p>
-                    <button class="experience-button"><a href="./Product-manager/index.html" target="blank">Ver más</a></button>
-                    <div class="skills">
-                        <p>Communication</p>
-                        <p>Google Analytics</p>
-                        <P>Power BI</P>                    
-                </div>
-            </article>
-            <article class="experience">
-                <figure class="experience-imageContainer">
-                    <img class="experience-image" src="./Images/Usability-hero.png" width="500" />
-                </figure>
-                <div class="experience-detail">
-                    <h3 class="experience-title">Usability</h3>
-                    <p class="experience-description">Una pasión hasta hace poco descubierta, esto me ha permitido desarrollar mi empatía y acercarme mucho más a los usuarios.</p>
-                    <button class="experience-button"><a href="./Usability/index.html" target="blank">Ver más</a></button>
-                    <div class="skills">
-                        <p>UX</p>
-                        <p>UI</p>
-                        <P>Figma</P>
-                        <p>Hotjar</p>
-                </div>
-            </article>
-            <article class="experience">
-                <figure class="experience-imageContainer">
-                    <img class="experience-image-wd" src="./Images/Web-development-hero.png" width="500" />
-                </figure>
-                <div class="experience-detail">
-                    <h3 class="experience-title">Web Development</h3>
-                    <p class="experience-description">No me considero una experta y aún tengo mucho por aprender, pero es un conocimiento necesario y muy útil que he incorporado con el paso del tiempo.</p>
-                    <button class="experience-button"><a href="./Web-development/index.html" target="blank">Ver más</a></button>                    
-                    <div class="skills">
-                        <p>HTML5</p>
-                        <p>CSS</p>
-                        <P>Java Script</P>
-                        <p>Python</p>
-                </div>
+            <article class="experience-container">
+                <article class="experience">
+                    <figure class="experience-imageContainer">
+                        <img class="experience-image" src="./Images/Hero.jpg"/>
+                    </figure>
+                    <div class="experience-detail">
+                        <h3 class="experience-title">Project Management</h3>
+                        <p class="experience-description">Tengo más de 6 años de experiencia dirigiendo proyectos de desarrollo de hardware y software al rededor del mundo.</p>
+                        <button class="experience-button"><a href="./Project-manager/index.html" target="blank">Ver más</a></button>
+                        <div class="skills">
+                            <p>Agile</p>
+                            <p>PMP</p>
+                            <!-- <P>MS Project</P> -->
+                            <p>Monday</p>
+                    </div>
+                </article>
+                <article class="experience">
+                    <figure class="experience-imageContainer">
+                        <img class="experience-image" src="./Images/Hero.jpg" width="500" />
+                    </figure>
+                    <div class="experience-detail">
+                        <h3 class="experience-title">Product Management</h3>
+                        <p class="experience-description">Es el cargo que desempeño actualmente y me ha abierto la puerta a un mundo de conocimiento hasta ahora desconocido.</p>
+                        <button class="experience-button"><a href="./Product-manager/index.html" target="blank">Ver más</a></button>
+                        <div class="skills">
+                            <!-- <p>Communication</p> -->
+                            <p>Google Analytics</p>
+                            <P>Power BI</P>                    
+                    </div>
+                </article>
+                <article class="experience">
+                    <figure class="experience-imageContainer">
+                        <img class="experience-image" src="./Images/Hero.jpg" width="500" />
+                    </figure>
+                    <div class="experience-detail">
+                        <h3 class="experience-title">Usability</h3>
+                        <p class="experience-description">Una pasión hasta hace poco descubierta, esto me ha permitido desarrollar mi empatía y acercarme mucho más a los usuarios.</p>
+                        <button class="experience-button"><a href="./Usability/index.html" target="blank">Ver más</a></button>
+                        <div class="skills">
+                            <p>UX</p>
+                            <p>UI</p>
+                            <P>Figma</P>
+                            <p>Hotjar</p>
+                    </div>
+                </article>
+                <article class="experience">
+                    <figure class="experience-imageContainer">
+                        <img class="experience-image" src="./Images/Hero.jpg" width="500" />
+                    </figure>
+                    <div class="experience-detail">
+                        <h3 class="experience-title">Web Development</h3>
+                        <p class="experience-description">No me considero una experta y aún tengo mucho por aprender, pero es un conocimiento necesario y muy útil que he incorporado con el paso del tiempo.</p>
+                        <button class="experience-button"><a href="./Web-development/index.html" target="blank">Ver más</a></button>                    
+                        <div class="skills">
+                            <p>HTML5</p>
+                            <p>CSS</p>
+                            <P>JS</P>
+                            <p>Python</p>
+                    </div>
+                </article>
             </article>
         </div>
     </section>
@@ -156,6 +159,10 @@
                 </form>
                 <div class="social">
                     <a href="" class="social-link gmail"></a>
+                    <!-- <i class="icon-email"></i>
+                    <i class="icon-twitter"></i>
+                    <i class="icon-github"></i>
+                    <i class="icon-linkedin"></i> -->
                     <a href="https://twitter.com/Adri_urrego18" target="_blank" class="social-link twitter"></a>
                     <a href="https://www.linkedin.com/in/luz-adriana-urrego-m%C3%A9ndez-198406157/" target="_blank" class="social-link linkedin"></a>
                     <a href="https://github.com/AdrianaUrrego" target="_blank" class="social-link github"></a>
@@ -164,5 +171,33 @@
             </div>            
         </div>
     </section>
+    <script>     
+        console.log ();   
+        const ipad = window.matchMedia('screen and (max-width: 767px)');
+        const menu = document.querySelector('.menu');
+        // console.log(menu);
+        const burgerButton = document.querySelector('#burger-menu');
+        // console.log(burgerButton);
+
+
+        ipad.addListener(validation)
+
+        function validation(event){
+            console.log(event.matches);
+            if (event.matches) {
+                burgerButton.addEventListener('click', hideShow)
+            } else {
+                burgerButton.removeEventListener('click', hideShow)
+            }
+        }
+
+        function hideShow() {
+            if (menu.classList.contains('is-active')) {
+                menu.classList.remove('is-active');
+            } else{
+                menu.classList.add('is-active');
+            }
+        }
+    </script>
 </body>
 </html>
