--- a/Usability/index.html
+++ b/Usability/index.html
@@ -75,7 +75,7 @@
                     Recently I have discovered an ability to design high and low-fidelity prototypes for user interaction, I don’t have a strong background in design techniques but I continue learning about best practices and tools to prototype software interfaces.<br> I have been working with Adobe XD, Figma, InVision, Sketch, and recently Illustrator.                    
                 </p>
                 <figure class="experience-image">
-                    <img src="./Images/Prototyping.png" width="180" height="220" alt="Imagen de los proyectos de control de combustible">
+                    <!-- <img src="./Images/Prototyping.png" width="180" height="220" alt="Imagen de los proyectos de control de combustible"> -->
                 </figure>
             </section>
         </div>
