--- a/Index.html
+++ b/Index.html
@@ -46,10 +46,7 @@
         <div class="container">
             <article class="profile">
                 <h2>About me</h2>
-                <p>Experienced Project Manager with more than 6 years of work in
-                    technical projects using Agile methodologies and PMBOK. Organized,
-                    proactive and goal-oriented, very good communicating, planning and
-                    lead people.</p>
+                <p>I am an economist who by chance found the technological world and has not left it since. I love learning, studying and supporting those around me, it motivates me to work in teams that generate high-impact products and that always seek to help make the world a better place for everyone.</p>
             </article>
             <article class="WhatIlovetodo">
                 <h2>What I love to do</h2>
@@ -76,7 +73,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Project Management</h3>
-                        <p class="experience-description">Tengo más de 6 años de experiencia dirigiendo proyectos de desarrollo de hardware y software al rededor del mundo.</p>
+                        <p class="experience-description">I have more than 6 years of experience leading hardware and software projects with cross-functional teams around the world.</p>
                         <button class="experience-button"><a href="./Project-manager/index.html" target="blank">Ver más</a></button>
                         <div class="skills">
                             <p>Agile</p>
@@ -91,7 +88,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Product Management</h3>
-                        <p class="experience-description">Es el cargo que desempeño actualmente y me ha abierto la puerta a un mundo de conocimiento hasta ahora desconocido.</p>
+                        <p class="experience-description">It’s my actual position and it has me open the doors to a knowledge world hitherto unknown.</p>
                         <button class="experience-button"><a href="./Product-manager/index.html" target="blank">Ver más</a></button>
                         <div class="skills">
                             <!-- <p>Communication</p> -->
@@ -105,7 +102,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Usability</h3>
-                        <p class="experience-description">Una pasión hasta hace poco descubierta, esto me ha permitido desarrollar mi empatía y acercarme mucho más a los usuarios.</p>
+                        <p class="experience-description">A passion until recently discovered, this has allowed me to develop my empathy and get much closer to users.</p>
                         <button class="experience-button"><a href="./Usability/index.html" target="blank">Ver más</a></button>
                         <div class="skills">
                             <p>UX</p>
@@ -120,7 +117,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Web Development</h3>
-                        <p class="experience-description">No me considero una experta y aún tengo mucho por aprender, pero es un conocimiento necesario y muy útil que he incorporado con el paso del tiempo.</p>
+                        <p class="experience-description">I don’t consider myself an expert on this matter, but it’s a necessary knowledge and very useful that I have been incorporating over time.</p>
                         <button class="experience-button"><a href="./Web-development/index.html" target="blank">Ver más</a></button>                    
                         <div class="skills">
                             <p>HTML5</p>
@@ -138,7 +135,7 @@
                 <h2>Contact me</h2>
             </div>
             <div class="form-and-social">
-                <form action="" class="form-email">
+                <!-- <form action="" class="form-email">
                     <div>
                         <div class="name-container">
                             <label for="name">Name</label>
@@ -154,11 +151,12 @@
                         </div>    
                     </div>
                     <div>
-                        <button class="contact-button" type="submit">Enviar</button>
+                        <button class="contact-button" type="submit">Send</button>
                     </div>
-                </form>
+                </form> -->
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me;):</p>
                 <div class="social">
-                    <a href="" class="social-link gmail"></a>
+                    <!-- <a href="" class="social-link gmail"></a> -->
                     <!-- <i class="icon-email"></i>
                     <i class="icon-twitter"></i>
                     <i class="icon-github"></i>
@@ -190,6 +188,7 @@
                 burgerButton.removeEventListener('click', hideShow)
             }
         }
+        validation(ipad);
 
         function hideShow() {
             if (menu.classList.contains('is-active')) {
