Se actualizan copys

--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="hero-sentence">
-                 Hi! I'm <strong>Adriana Urrego</strong> <br/> a <strong>Product Manager</strong>
+                 Hi! I'm Adriana Urrego,<br> <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
                 <img class="hero-image" src="Images/Hero.jpg" width="600" height="390" alt="Imagen principal del sitio"> 
@@ -46,7 +46,7 @@
         <div class="container">
             <article class="profile">
                 <h2>About me</h2>
-                <p>I am an economist who by chance found the technological world and has not left it since. I love learning, studying and supporting those around me, it motivates me to work in teams that generate high-impact products and that always seek to help make the world a better place for everyone.</p>
+                <p>I am an economist who found in the tech world a way to make the world a better place for everyone. I love learning, studying and supporting those around me, and working in teams that generate high-impact products motivates me.</p>
             </article>
             <article class="WhatIlovetodo">
                 <h2>What I love to do</h2>
@@ -88,7 +88,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Product Management</h3>
-                        <p class="experience-description">It’s my actual position and it has me open the doors to a knowledge world hitherto unknown.</p>
+                        <p class="experience-description">It’s my current position, and it has allowed me to see the big picture, and think ahead in order to make products more user-friendly.</p>
                         <button class="experience-button"><a href="./Product-manager/index.html" target="blank">Ver más</a></button>
                         <div class="skills">
                             <!-- <p>Communication</p> -->
@@ -102,7 +102,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Usability</h3>
-                        <p class="experience-description">A passion until recently discovered, this has allowed me to develop my empathy and get much closer to users.</p>
+                        <p class="experience-description">A passion recently discovered that has allowed me to develop my empathy towards users, and use it to work in the development process of software that the costumer enjoys.</p>
                         <button class="experience-button"><a href="./Usability/index.html" target="blank">Ver más</a></button>
                         <div class="skills">
                             <p>UX</p>
@@ -117,7 +117,7 @@
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Web Development</h3>
-                        <p class="experience-description">I don’t consider myself an expert on this matter, but it’s a necessary knowledge and very useful that I have been incorporating over time.</p>
+                        <p class="experience-description">I don’t consider myself an expert on this matter, but it has become a must in the set of skills required on my field, and I’m constantly educating myself on it.</p>
                         <button class="experience-button"><a href="./Web-development/index.html" target="blank">Ver más</a></button>                    
                         <div class="skills">
                             <p>HTML5</p>
@@ -154,7 +154,7 @@
                         <button class="contact-button" type="submit">Send</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me;):</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me:</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <!-- <i class="icon-email"></i>
