--- a/Usability/index.html
+++ b/Usability/index.html
@@ -47,7 +47,7 @@
             <h3>User research</h3>
             <section class="sentence-img-container">
                 <p class="experince-sentence">
-                    Working with users has been a passion for me since I got my first work at 16 yearls old where I started to work as a sales representative in a small perfume store. The user research techniques have opened me a world of tools I can use to know deeply the users of the products I’m working on.<br> User research is one of my favorite things to do every day, I really enjoy talking to the users and empathize about their pain points. I always prefer to make interviews as a qualitative method but I often use polls and A/B tests as quantitative research. 
+                    Working with users has been my passion since I got my first job at 16. The user research techniques have showed me a set of tools that allow me to deeply know the users of the products I’m working on; I really enjoy talking to the users and empathize with their pain points. I always prefer to make interviews as a qualitative method but I often use polls and A/B tests as quantitative research. 
                 </p>
                 <figure class="experience-image">
                     <img src="./Images/User-research.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
@@ -60,7 +60,7 @@
             <h3>Usability test</h3>
             <section class="sentence-img-container">
                 <p class="experince-sentence-tests">
-                    This is a powerful tool that we, product managers, have to test if the hypothesis we established to create a solution for our customer's pains are correct or not, so I’m very familiar with this kind of test.<br> I believe that this kind of test is the best practice to guaranty that the products we develop are really useful for our users, also it has helped me to save money for the company avoiding the work on unnecessary or incomprehensible features (learning fast).
+                    This is a powerful tool that we, product managers, have to check if the hypotheses we have established are correct or not, so I’m very familiar with this kind of test.<br> I believe that using tests like these is a best practice to guarantee that the products we develop are useful to our users, and also it has helped me to save money for the company by avoiding to work on unnecessary or incomprehensible features (fast learning).
                 </p>
                 <figure class="experience-image-tests">
                     <img src="./Images/Usability-test.png" width="300" height="180" alt="Imagen de FleetSAP">
@@ -73,7 +73,7 @@
             <h3>Prototyping</h3>
             <section class="sentence-img-container">
                 <p class="experince-sentence">
-                    Recently I have discovered an ability to design high and low-fidelity prototypes for user interaction, I don’t have a strong background in design techniques but I continue learning about best practices and tools to prototype software interfaces.<br> I have been working with Adobe XD, Figma, InVision, Sketch, and recently Illustrator.                    
+                    I have recently discovered an ability to design high and low-fidelity prototypes for user interaction; I don’t have a strong background in design techniques but I continue to learn about best practices and tools to prototype software interfaces.<br> I have been working with Adobe XD, Figma, InVision, Sketch, and recently Adobe Illustrator.                    
                 </p>
                 <figure class="experience-image">
                     <!-- <img src="./Images/Prototyping.png" width="180" height="220" alt="Imagen de los proyectos de control de combustible"> -->
@@ -106,7 +106,7 @@
                         <button class="contact-button" type="submit">Enviar</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me;):</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me:</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <a href="https://twitter.com/Adri_urrego18" target="_blank" class="social-link twitter"></a>
