--- a/Product-manager/index.html
+++ b/Product-manager/index.html
@@ -46,46 +46,46 @@
         <div class="container">
             <h3>Quicker App</h3>
             <p class="experince-sentence">
-                When I took this product, the first and even the second version of it were released and were used by around 500 drivers in the country. We wanted to change the whole UX to introduce new powerful features and two new business units.
+                When I took over this product, the main goal was to change the whole UX to introduce new powerful features and two new business units.
             </p>
             <section class="sentence-img-container">
                 <p class="experience-sentence-middle">
-                    We started the process established the information architecture for each one of the business units finding their common points to create a friendly interface, knowing deeply the users through one-to-one interviews, the business having daily meetings with the stakeholders, and making a benchmarking to check the competition.<br> At the end of a month of hard work and a lot of wireframes, we created our final mockup and did usability tests with some users to check our hypothesis, the tests were very good and the users were able to complete the most of the task we gave them, so we decided to move on with the development.
+                    We started the process by creating the information architecture for each one of the business units, knowing the users deeply through one-to-one interviews, and using benchmarking to check the competition.<br> After a month of hard work and a lot of wireframes, we created our final mockup and achieved successful usability tests with some users, moving on to the development process.
                 </p>
                 <figure class="experience-image">
                     <img src="./Images/Quicker-app.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
                 </figure>
             </section>
             <p class="experince-sentence">
-                Now, this app has more than 1000 installations and we continue released features to help our drivers to make their work easiest.
+                After said updates, the download rate increased by 1000 downloads in a month, and nowadays we continue releasing new features that improve our Quicker's permormance.
             </p>
         </div>
     </section>
     <section class="experience-container">
         <div class="container">
-            <h3>Web application to control the logistic operation</h3>
+            <h3>Operation app</h3>
             <p class="experince-sentence">
-                This is the control panel for all the logistic operations in three countries and four different business units at the company, so centralize all the features and information was our main goal.<br> We started with a limit but functional MVP that had the minimum options that the operations needed to work, this was because we wanted to make sure that the whole platform worked as expected before to develop new functions. So our development and QA team worked very hard for around one month to perfect the operation of each one of the options for all the business units.
+                This is the control panel that manages all features and information for all the logistic operations of a company in three countries and four different business units.<br> We started improving the MVP, making sure that the whole platform worked as expected before developing new features. 
             </p>
             <section class="sentence-img-container">
                 <p class="experience-sentence-middle-left">
-                    In the meantime, I create one-to-one meetings with the people who were on the front lines because I was too interested to know how they made their work and what were their pain points, I also made a lot of interviews with customers, knowing their logistic process to find what werw the most important features for the platform.<br> With all this information I establish 10 different insights that ended up in around 30 different user histories with high, medium, and low priority requirements that were included and delivered in our weekly sprints.
+                    In the meantime, I met with the people in charge of the operations in order to know how the division worked, and what their pain points were. I also interviewed several customers so as to know their logistic process and find what the most important features for the platform were.<br> With all this information I established different insights that ended up in user histories with high, medium, and low priority requirements that were included and delivered during our weekly sprints. 
                 </p>
                 <figure class="experience-image">
                     <img src="./Images/Logistic-operation.png" width="300" height="180" alt="Imagen de FleetSAP">
                 </figure>
             </section>
             <p class="experince-sentence">
-                Nowadays, we continue releasing deliverables every week, to help our operation team to optimize the logistic of our customers.
+                Nowadays, we continue to release deliverables every week to help the operations team to optimize the logistics of the customers.
             </p>
         </div>
     </section>
     <section class="experience-container-last">
         <div class="container">
-            <h3>All in one application</h3>
+            <h3>All in one app</h3>
             <section class="sentence-img-container">
                 <p class="experince-sentence-last">
-                    Nowadays, I’m working with the product team to create an All-in-one application to give our customers all the options we developed in a single platform.<br> It isn’t an easy job because we have three main but different products that want to perform in one single app, in this case, we created the information architecture based on the knowledge of each one of the products and the user histories we have recollected in our experience working in this industry.<br> We hope to start usability tests soon to test the mockups we created using atom design and check if the hypothesis we formulated is right.
+                    I’m currently working with the product team to create an All-in-one app that gives our customers all the options we offer; it isn’t an easy job to have three different products in one app but we took the challenge.<br> So far we have created the information architecture based on the knowledge of each one of the products and the user histories that we have recollected through our experience working on this industry.<br> We hope to start usability tests soon, test the mockups we created using Atom Design, and check if the hypotheses we formulated are right.
                 </p>
                 <figure class="experience-image">
                     <img src="./Images/All-in-one.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
