--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                  Hi! I'm Adriana Urrego,<br> <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="Images/Hero.jpg" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="Images/Hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
@@ -69,7 +69,7 @@
             <article class="experience-container">
                 <article class="experience">
                     <figure class="experience-imageContainer">
-                        <img class="experience-image" src="./Images/Hero.jpg"/>
+                        <img class="experience-image" src="./Images/Project-manager-hero.png"/>
                     </figure>
                     <div class="experience-detail">
                         <h3 class="experience-title">Project Management</h3>
