Se cambia la seccion de la experiencia

--- a/Index.html
+++ b/Index.html
@@ -68,9 +68,9 @@
             </article>
             <article class="experience-container">
                 <article class="experience">
-                    <figure class="experience-imageContainer">
+                    <!-- <figure class="experience-imageContainer">
                         <img class="experience-image" src="./Images/Project-manager-hero.png"/>
-                    </figure>
+                    </figure> -->
                     <div class="experience-detail">
                         <h3 class="experience-title">Project Management</h3>
                         <p class="experience-description">I have more than 6 years of experience leading hardware and software projects with cross-functional teams around the world.</p>
@@ -83,9 +83,9 @@
                     </div>
                 </article>
                 <article class="experience">
-                    <figure class="experience-imageContainer">
+                    <!-- <figure class="experience-imageContainer">
                         <img class="experience-image" src="./Images/Hero.jpg" width="500" />
-                    </figure>
+                    </figure> -->
                     <div class="experience-detail">
                         <h3 class="experience-title">Product Management</h3>
                         <p class="experience-description">It’s my current position, and it has allowed me to see the big picture, and think ahead in order to make products more user-friendly.</p>
@@ -97,9 +97,9 @@
                     </div>
                 </article>
                 <article class="experience">
-                    <figure class="experience-imageContainer">
+                    <!-- <figure class="experience-imageContainer">
                         <img class="experience-image" src="./Images/Hero.jpg" width="500" />
-                    </figure>
+                    </figure> -->
                     <div class="experience-detail">
                         <h3 class="experience-title">Usability</h3>
                         <p class="experience-description">A passion recently discovered that has allowed me to develop my empathy towards users, and use it to work in the development process of software that the costumer enjoys.</p>
@@ -112,9 +112,9 @@
                     </div>
                 </article>
                 <article class="experience">
-                    <figure class="experience-imageContainer">
+                    <!-- <figure class="experience-imageContainer">
                         <img class="experience-image" src="./Images/Hero.jpg" width="500" />
-                    </figure>
+                    </figure> -->
                     <div class="experience-detail">
                         <h3 class="experience-title">Web Development</h3>
                         <p class="experience-description">I don’t consider myself an expert on this matter, but it has become a must in the set of skills required on my field, and I’m constantly educating myself on it.</p>
@@ -154,7 +154,7 @@
                         <button class="contact-button" type="submit">Send</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me:</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <!-- <i class="icon-email"></i>
