Se cambia la estructura de la experiencia

--- a/Product-manager/index.html
+++ b/Product-manager/index.html
@@ -38,60 +38,68 @@
                  <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Product-manager-hero.png" width="250" height="300" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Product-manager-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
-    <section class="experience-container-first">
-        <div class="container">
-            <h3>Quicker App</h3>
-            <p class="experince-sentence">
-                When I took over this product, the main goal was to change the whole UX to introduce new powerful features and two new business units.
-            </p>
-            <section class="sentence-img-container">
-                <p class="experience-sentence-middle">
-                    We started the process by creating the information architecture for each one of the business units, knowing the users deeply through one-to-one interviews, and using benchmarking to check the competition.<br> After a month of hard work and a lot of wireframes, we created our final mockup and achieved successful usability tests with some users, moving on to the development process.
+    <section class="experience">
+        <article class="experience-container">
+            <div class="container">
+                <h3>Quicker App</h3>
+                <p class="experience-sentence">
+                    When I took over this product, the main goal was to change the whole UX to introduce new powerful features and two new business units.
                 </p>
-                <figure class="experience-image">
-                    <img src="./Images/Quicker-app.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
-                </figure>
-            </section>
-            <p class="experince-sentence">
-                After said updates, the download rate increased by 1000 downloads in a month, and nowadays we continue releasing new features that improve our Quicker's permormance.
-            </p>
-        </div>
-    </section>
-    <section class="experience-container">
-        <div class="container">
-            <h3>Operation app</h3>
-            <p class="experince-sentence">
-                This is the control panel that manages all features and information for all the logistic operations of a company in three countries and four different business units.<br> We started improving the MVP, making sure that the whole platform worked as expected before developing new features. 
-            </p>
-            <section class="sentence-img-container">
-                <p class="experience-sentence-middle-left">
-                    In the meantime, I met with the people in charge of the operations in order to know how the division worked, and what their pain points were. I also interviewed several customers so as to know their logistic process and find what the most important features for the platform were.<br> With all this information I established different insights that ended up in user histories with high, medium, and low priority requirements that were included and delivered during our weekly sprints. 
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        We started the process by creating the information architecture for each one of the business units, knowing the users deeply through one-to-one interviews, and using benchmarking to check the competition.<br> After a month of hard work and a lot of wireframes, we created our final mockup and achieved successful usability tests with some users, moving on to the development process.
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/Quicker-app.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
+                    </figure> -->
+                </section>
+                <p class="experience-sentence">
+                    After said updates, the download rate increased by 1000 downloads in a month, and nowadays we continue releasing new features that improve our Quicker's permormance.
                 </p>
-                <figure class="experience-image">
-                    <img src="./Images/Logistic-operation.png" width="300" height="180" alt="Imagen de FleetSAP">
-                </figure>
-            </section>
-            <p class="experince-sentence">
-                Nowadays, we continue to release deliverables every week to help the operations team to optimize the logistics of the customers.
-            </p>
-        </div>
-    </section>
-    <section class="experience-container-last">
-        <div class="container">
-            <h3>All in one app</h3>
-            <section class="sentence-img-container">
-                <p class="experince-sentence-last">
-                    I’m currently working with the product team to create an All-in-one app that gives our customers all the options we offer; it isn’t an easy job to have three different products in one app but we took the challenge.<br> So far we have created the information architecture based on the knowledge of each one of the products and the user histories that we have recollected through our experience working on this industry.<br> We hope to start usability tests soon, test the mockups we created using Atom Design, and check if the hypotheses we formulated are right.
+            </div>
+        </article>
+        <article class="experience-container">
+            <div class="container">
+                <h3>Operation app</h3>
+                <p class="experience-sentence">
+                    This is the control panel that manages all features and information for all the logistic operations of a company in three countries and four different business units.<br> We started improving the MVP, making sure that the whole platform worked as expected before developing new features. 
                 </p>
-                <figure class="experience-image">
-                    <img src="./Images/All-in-one.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
-                </figure>
-            </section>
-        </div>
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        In the meantime, I met with the people in charge of the operations in order to know how the division worked, and what their pain points were. I also interviewed several customers so as to know their logistic process and find what the most important features for the platform were.<br> With all this information I established different insights that ended up in user histories with high, medium, and low priority requirements that were included and delivered during our weekly sprints. 
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/Logistic-operation.png" width="300" height="180" alt="Imagen de FleetSAP">
+                    </figure> -->
+                </section>
+                <p class="experience-sentence">
+                    Nowadays, we continue to release deliverables every week to help the operations team to optimize the logistics of the customers.
+                </p>
+            </div>
+        </article>
+        <article class="experience-container">
+            <div class="container">
+                <h3>All in one app</h3>
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        I’m currently working with the product team to create an All-in-one app that gives our customers all the options we offer; it isn’t an easy job to have three different products in one app but we took the challenge.
+                    </p>
+                    <p class="experience-sentence">
+                        So far we have created the information architecture based on the knowledge of each one of the products and the user histories that we have recollected through our experience working on this industry.
+                    </p>
+                    <p class="experience-sentence">
+                        We hope to start usability tests soon, test the mockups we created using Atom Design, and check if the hypotheses we formulated are right.
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/All-in-one.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
+                    </figure> -->
+                </section>
+            </div>
+        </article>
     </section>
     <section id="Contact" class="contact">
         <div class="container">
