Cambio en el segmento experiencia

--- a/Product-manager/index.html
+++ b/Product-manager/index.html
@@ -38,7 +38,7 @@
                  <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Product-manager-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Product-manager-hero.png" width="600" height="350" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
@@ -126,7 +126,7 @@
                         <button class="contact-button" type="submit">Send</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me;):</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <a href="https://twitter.com/Adri_urrego18" target="_blank" class="social-link twitter"></a>
