--- a/Usability/index.html
+++ b/Usability/index.html
@@ -38,48 +38,50 @@
                  <strong>Usability</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Usability-hero.png" width="250" height="300" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Usability-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
-    <section class="experience-container">
-        <div class="container">
-            <h3>User research</h3>
-            <section class="sentence-img-container">
-                <p class="experince-sentence">
-                    Working with users has been my passion since I got my first job at 16. The user research techniques have showed me a set of tools that allow me to deeply know the users of the products I’m working on; I really enjoy talking to the users and empathize with their pain points. I always prefer to make interviews as a qualitative method but I often use polls and A/B tests as quantitative research. 
-                </p>
-                <figure class="experience-image">
-                    <img src="./Images/User-research.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
-                </figure>
-            </section>
-        </div>
-    </section>
-    <section class="experience-container">
-        <div class="container">
-            <h3>Usability test</h3>
-            <section class="sentence-img-container">
-                <p class="experince-sentence-tests">
-                    This is a powerful tool that we, product managers, have to check if the hypotheses we have established are correct or not, so I’m very familiar with this kind of test.<br> I believe that using tests like these is a best practice to guarantee that the products we develop are useful to our users, and also it has helped me to save money for the company by avoiding to work on unnecessary or incomprehensible features (fast learning).
-                </p>
-                <figure class="experience-image-tests">
-                    <img src="./Images/Usability-test.png" width="300" height="180" alt="Imagen de FleetSAP">
-                </figure>
-            </section>
-        </div>
-    </section>
-    <section class="experience-container">
-        <div class="container">
-            <h3>Prototyping</h3>
-            <section class="sentence-img-container">
-                <p class="experince-sentence">
-                    I have recently discovered an ability to design high and low-fidelity prototypes for user interaction; I don’t have a strong background in design techniques but I continue to learn about best practices and tools to prototype software interfaces.<br> I have been working with Adobe XD, Figma, InVision, Sketch, and recently Adobe Illustrator.                    
-                </p>
-                <figure class="experience-image">
-                    <!-- <img src="./Images/Prototyping.png" width="180" height="220" alt="Imagen de los proyectos de control de combustible"> -->
-                </figure>
-            </section>
-        </div>
+    <section class="experience">
+        <article class="experience-container">
+            <div class="container">
+                <h3>User research</h3>
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        Working with users has been my passion since I got my first job at 16. The user research techniques have showed me a set of tools that allow me to deeply know the users of the products I’m working on; I really enjoy talking to the users and empathize with their pain points. I always prefer to make interviews as a qualitative method but I often use polls and A/B tests as quantitative research. 
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/User-research.png" width="300" height="180" alt="Imagen de los proyectos de control de combustible">
+                    </figure> -->
+                </section>
+            </div>
+        </article>
+        <article class="experience-container">
+            <div class="container">
+                <h3>Usability test</h3>
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        This is a powerful tool that we, product managers, have to check if the hypotheses we have established are correct or not, so I’m very familiar with this kind of test.<br> I believe that using tests like these is a best practice to guarantee that the products we develop are useful to our users, and also it has helped me to save money for the company by avoiding to work on unnecessary or incomprehensible features (fast learning).
+                    </p>
+                    <!-- <figure class="experience-image-tests">
+                        <img src="./Images/Usability-test.png" width="300" height="180" alt="Imagen de FleetSAP">
+                    </figure> -->
+                </section>
+            </div>
+        </article>
+        <article class="experience-container">
+            <div class="container">
+                <h3>Prototyping</h3>
+                <section class="sentence-img-container">
+                    <p class="experience-sentence">
+                        I have recently discovered an ability to design high and low-fidelity prototypes for user interaction; I don’t have a strong background in design techniques but I continue to learn about best practices and tools to prototype software interfaces.<br> I have been working with Adobe XD, Figma, InVision, Sketch, and recently Adobe Illustrator.                    
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/Prototyping.png" width="180" height="220" alt="Imagen de los proyectos de control de combustible">
+                    </figure> -->
+                </section>
+            </div>
+        </article>
     </section>
     <section id="Contact" class="contact">
         <div class="container">
@@ -106,7 +108,7 @@
                         <button class="contact-button" type="submit">Enviar</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me:</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <a href="https://twitter.com/Adri_urrego18" target="_blank" class="social-link twitter"></a>
