--- a/Web-development/index.html
+++ b/Web-development/index.html
@@ -38,21 +38,23 @@
                  <strong>Web Development</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Web-development-hero.png" width="300" height="290" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Web-development-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
-    <section class="experience-container">
-        <div class="container">          
-                <p class="experince-sentence">
-                    I’m not an expert on this matter; in fact, I have never worked as a developer in a professional team, but development is one of the highest challenges I’ve had to face in my professional career, that is why this year (2020) I challenged myself to gain all the knowledge needed to complete a whole development project on my own.<br> Creating my personal web site was my first objective; it was proudly designed and developed by me (if you want you can take a look at the code in my GitHub profile). But now I’m facing new projects in order to practice my recently acquired knowledge in JavaScript and Python. I will update this post with the results of these new projects. 
-                </p>
-                <figure class="experience-image">
-                    <img src="./Images/logos.jpg" width="200" height="100" alt="Logos HTML, CSS y JavaScript">
-                    <img src="./Images/python logo.jpg" width="100" height="100" alt="Logo Python">
-                </figure>
-            </section>
-        </div>
+    <section class="experience">
+        <article class="experience-container">
+            <div class="container">          
+                    <p class="experince-sentence">
+                        I’m not an expert on this matter; in fact, I have never worked as a developer in a professional team, but development is one of the highest challenges I’ve had to face in my professional career, that is why this year (2020) I challenged myself to gain all the knowledge needed to complete a whole development project on my own.<br> Creating my personal web site was my first objective; it was proudly designed and developed by me (if you want you can take a look at the code in my GitHub profile). But now I’m facing new projects in order to practice my recently acquired knowledge in JavaScript and Python. I will update this post with the results of these new projects. 
+                    </p>
+                    <!-- <figure class="experience-image">
+                        <img src="./Images/logos.jpg" width="200" height="100" alt="Logos HTML, CSS y JavaScript">
+                        <img src="./Images/python logo.jpg" width="100" height="100" alt="Logo Python">
+                    </figure> -->
+                </section>
+            </div>
+        </article>
     </section>
     <section id="Contact" class="contact">
         <div class="container">
@@ -79,7 +81,7 @@
                         <button class="contact-button" type="submit">Enviar</button>
                     </div>
                 </form> -->
-                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me:</p>
+                <p>If you want to discuss a project, an idea or just to have a coffee, don't hesitate to contact me</p>
                 <div class="social">
                     <!-- <a href="" class="social-link gmail"></a> -->
                     <a href="https://twitter.com/Adri_urrego18" target="_blank" class="social-link twitter"></a>
