--- a/Web-development/index.html
+++ b/Web-development/index.html
@@ -46,7 +46,7 @@
         <article class="experience-container">
             <div class="container">          
                     <p class="experince-sentence">
-                        I’m not an expert on this matter; in fact, I have never worked as a developer in a professional team, but development is one of the highest challenges I’ve had to face in my professional career, that is why this year (2020) I challenged myself to gain all the knowledge needed to complete a whole development project on my own.<br> Creating my personal web site was my first objective; it was proudly designed and developed by me (if you want you can take a look at the code in my GitHub profile). But now I’m facing new projects in order to practice my recently acquired knowledge in JavaScript and Python. I will update this post with the results of these new projects. 
+                        I’m not an expert on this matter; in fact, I have never worked as a developer in a professional team, but development is one of the highest challenges I’ve had to face in my professional career, that is why last year (2020) I challenged myself to gain all the knowledge needed to complete a whole development project on my own.<br> Creating my personal web site was my first objective; it was proudly designed and developed by me (if you want you can take a look at the code in my GitHub profile). But now I’m facing new projects in order to practice my recently acquired knowledge in JavaScript and Python. I will update this post with the results of these new projects. 
                     </p>
                     <!-- <figure class="experience-image">
                         <img src="./Images/logos.jpg" width="200" height="100" alt="Logos HTML, CSS y JavaScript">
